# CraftOn-infra

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
api/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
api/app/: __init__.py  main.py
api/app/api/: deps.py  system.py
api/app/api/v1/: admin.py  auth.py  (+10 more)
api/app/core/: auth.py  clock.py  config.py  errors.py  i18n.py  identifiers.py  logging.py  security.py  session_token.py  storage.py
api/app/db/: base.py  session.py
api/app/locales/: en.json  ja.json
api/app/models/: __init__.py  app_config.py  application.py  contractor_profile.py  device.py  document.py  enums.py  job.py  matching.py  message.py  notification.py  review.py  saved_job.py  trade.py  user.py  worker_profile.py
api/app/schemas/: admin.py  application.py  common.py  contractor.py  device.py  document.py  job.py  matching.py  message.py  notification.py  review.py  trade.py  user.py  worker.py
api/app/services/: admin_ops.py  applications.py  chat.py  compliance.py  debug_seed.py  devices.py  documents.py  jobs.py  lifecycle.py  masking.py  matchings.py  notifications.py  onboarding.py  reviews.py  saved_jobs.py  state_machine.py  terms.py  trades.py  vetting.py
api/docs/: MAP.md
api/migrations/: env.py
api/migrations/versions/: 20260627_0935_e7b9856f81d3_initial_schema.py  20260627_1010_6d22c248e7a9_matching_completion_requested_at.py  20260628_0211_0f51f4e75385_profile_bio_and_experience_fields.py  20260628_0344_cceaccafd93c_notifications_table.py  20260628_0419_5c356fcb551f_saved_jobs_table.py  20260628_0815_5f097868d696_worker_extended_profile_fields.py  20260628_1110_7194e23e9595_user_password_hash.py  20260628_1126_4cff8c3c9be6_devices_table.py  (+5 more)
api/tests/: conftest.py  factories.py  test_account.py  test_admin_config.py  test_admin_create_admin.py  test_admin_overview.py  test_auth_session.py  test_auto_approve.py  test_chat.py  test_checkin_window.py  test_config_effective_url.py  test_config_precedence.py  test_debug_seed.py  test_devices.py  test_full_cycle.py  test_health.py  test_i18n_parity.py  test_job_edit_rules.py  test_jobs.py  test_lifecycle.py  test_login.py  test_masking.py  test_matching.py  test_notifications.py  test_onboarding.py  test_profile.py  test_reviews.py  test_saved_jobs.py  test_session_token.py  test_state_machine.py  test_trades.py  test_vetting_visa_gate.py  test_work_history.py  test_worker_photos.py
(+62 files in other folders)
