[project]
name = "crafton-api"
version = "0.1.0"
description = "CRAFT-ON backend API — on-demand spot matching for construction tradespeople (Japan). Phase 1 MVP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    # Real Cloud Storage signed URLs (GcsStorage); lazy-imported, but must ship in
    # the runtime image when CRAFTON_STORAGE_MODE=gcs.
    "google-cloud-storage>=2.18",
]

[project.optional-dependencies]
# Real Firebase token verification. Optional so local dev / CI can run with the
# fake verifier and without any GCP credentials (see app/core/auth.py).
firebase = [
    "firebase-admin>=6.5",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Tooling config
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
# Pyflakes (F), pycodestyle (E,W), isort (I), bugbear (B), pyupgrade (UP),
# comprehensions (C4), naming (N).
select = ["E", "W", "F", "I", "B", "UP", "C4", "N"]
ignore = [
    "B008",  # FastAPI uses function calls (Depends/Query) in argument defaults.
]

[tool.ruff.lint.per-file-ignores]
# Alembic migrations are largely autogenerated; don't fail CI on cosmetic
# import-ordering, long autogenerated lines, or the templated header's trailing
# space after "Revises:" when there is no down_revision.
"migrations/*" = ["E501", "I001", "W291"]
"tests/*" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["firebase_admin.*", "google.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
